**************************************************************
** MovieJukebox Release note
***************************************************************

MovieJukebox 1.0.12 beta
-----------------------
  - Fixed defect #122 Patch for MovieNFOScanner.java for old style imdb urls
  - Fixed defect #132 Unable to parse year of TV episode on IMDb
  - Fixed defect #134 Rating calculation not correct
  - Fixed defect #185 IMDB scanner is returning rating = "-1" in xml file
  - Fixed defect #187 trailing character in some IMDB plot output
  - Fixed defect #188 Runtime is sometimes showing up as UNKNOWN

MovieJukebox 1.0.11 beta
-----------------------
  - Enhancement Issue #78 Custom coverart Enhancement
    Quick first implementation (not flexible but working ;) )
    Scan the .nfo file for the URL of poster (currently only URL starting with
    http:// and ending with .jpg or .JPG)
    If this URL exists, set it as poster URL and to not search for another poster.
  - Enhancement Issue #81 Additional Video Sources (HD2DVD)
  - Fixed defect #96 Multiple Genres cause multiple entries under the "master" genres
  - Enhancement Issue #97 Prefix stripping is case sensitive
  - Enhancement Issue #105 Support for MP4 file format added
  - Fixed defect #106 XML indexes generation is very long
  - Enhancement Issue #107 Selective resizing of poster images
  - Enhancement Issue #108 Allocine Plugin
    New MovieDatabasePlugin using a french movie database site named AlloCine.
    set mjb.internet.plugin=com.moviejukebox.plugin.AllocinePlugin in moviejukebox.properties to use it
  - Enhancement Issue #109 Multiple Id for Movie objects
    Change the current id to a map of id indexed by a pluginIdString.
    For example:
       mediaFile.setId(ImdbPlugin.IMDB_PLUGIN_ID, imdbId);
       mediaFile.setId(AllocinePlugin.ALLOCINE_PLUGIN_ID, allocineId);
       mediaFile.getId(ImdbPlugin.IMDB_PLUGIN_ID);
    also
       mediaFile.getId();
       mediaFile.setId(imdbId);