@@ -61,3 +61,7 @@ mjb.poster.plugin=com.moviejukebox.plugin.DefaultPosterPlugin
 
 # Sorting prefixes to ignore:
 sorting.strip.prefixes="A ","The ","Le ","Les "
+
+# Ordering of certifications as displayed on the main index page.
+# If Another rating exists for a movie that isn't listed here, it will simply be appended to the end
+certification.ordering=G,PG,PG-13,R,NC-17,Unrated,Not Rated
